# GameEngine

./: .gitmodules  CMakeLists.txt  README.md  \  compile_commands.json
.cache/clangd/index/: SDL.c.345B590DB896785D.idx  SDL.h.FE09022AF99E6028.idx  SDL_RLEaccel.c.4B36BDEE5B84008B.idx  SDL_RLEaccel_c.h.B325B716A60482B0.idx  SDL_alsa_audio.c.6FC5EA2A2886D7AD.idx  SDL_alsa_audio.h.7CD43E24484256C1.idx  SDL_appid.c.9C2DBF699C7026D0.idx  SDL_appid.h.E25F78A0AAB5709F.idx  SDL_assert.c.FE335ED55CE120DD.idx  SDL_assert.h.19B66DD12777099E.idx  SDL_assert_c.h.E974FA4B2D35D348.idx  SDL_asyncio.c.DD2569247B5D2229.idx  SDL_asyncio.h.CDCA27CD711E8577.idx  SDL_asyncio_c.h.0027DBBF1780F62F.idx  SDL_asyncio_generic.c.641B41FA5EA0207C.idx  SDL_atomic.c.27968CF660227B36.idx  SDL_atomic.h.36B1BA5B48E8B375.idx  SDL_audio.c.129A51EAC8A3A7A5.idx  SDL_audio.h.BECAB43B0C77DCA8.idx  SDL_audio_c.h.ECAE7E67F59ED318.idx  SDL_audio_channel_converters.h.1817716115579E3A.idx  SDL_audiocvt.c.3E6BD06CDE15158A.idx  SDL_audiodev.c.717E80DE5A314AFC.idx  SDL_audioqueue.c.69606E47BC3834E3.idx  SDL_audioqueue.h.B838A4390988A277.idx  SDL_audioresample.c.A71AEF53DC281170.idx  SDL_audioresample.h.879C81ED9D021136.idx  (+587 more)
include/: colors.hpp  component_pool.hpp  ctime_typemap.hpp  entity.hpp  mpsc.hpp  physics.hpp  renderer.hpp  triple_buffer.hpp  vector.hpp  vector2d.hpp  world.hpp
include/RAII/: SDL.hpp  SDL_net.hpp
include/components/: drawable_rect.hpp  physics_body.hpp  transform.hpp
include/containers/: component_pool.hpp  mpsc.hpp  registry.hpp  triple_buffer.hpp  typemap.hpp
src/: main.cpp
